EchoFind-Sustainable second hand market

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoFind - Sustainable Second-Hand Marketplace</title>
+    <link rel="stylesheet" href="style.css">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons -->
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
         * {
@@ -122,7 +123,7 @@
     </style>
 </head>
 
-<body class="bg-slate-50 text-slate-800">
+<body class="text-slate-800">
     <div id="app">
         <!-- App will be rendered here -->
     </div>
@@ -810,7 +811,7 @@
             const icons = {
                 'Clothing': 'shirt',
                 'Electronics': 'smartphone',
-                'Furniture': 'chair',
+                'Furniture': 'armchair',
                 'Books': 'book-open',
                 'Home & Garden': 'home',
                 'Sports': 'dumbbell',
